--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
 <H1><%= @article.title %></H1>
 <P><%= @article.body %></P>
 <%= link_to "<<< Go back to article list", articles_path %>
+<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+<%= link_to "Edit", edit_article_path(@article)%>
