--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,3 @@
-<h1>Edit an Article</h1>
-
 <%= form_for(@article) do |f| %>
 	<ul>
 		<% @article.errors.full_messages.each do |error| %>
@@ -14,6 +12,10 @@
 	<p>
 		<%= f.label :body %><br>
 		<%= f.text_field :body %>
+	</p>
+	<p>
+		<%= f.label :tag_list %><br>
+		<%= f.text_field :tag_list %>
 	</p>
 	<p>
 		<%= f.submit %>
