add few gems(paperclip)

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,10 +5,13 @@
 		<%= link_to tag.name, tag_path(tag) %>
 	<% end %>
 </p>
+<p><%= image_tag @article.image.url(:medium) %></p>
 <P><%= @article.body %></P>
+<br>
+<br>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 
-<%= render partial: "articles/comment", collection: @article.comments %>
+<%= render partial: "articles/comment", collection: @article.comments %><br><br>
 <%= render partial: 'comments/form' %>
 
 <%= link_to "<<< Go back to article list", articles_path %>
