--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -4,5 +4,6 @@
 		<li><%= link_to article.title, article_path(article) %></li>
 	<% end %>
 </ul>
-
-<%= link_to "delete tag", tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %>
+<% if logged_in? %>
+	<%= link_to "delete tag", tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %>
+<% end %>
