--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,10 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap
- *= require font-awesome.min
- *= require fonts_css
- *= require font_css_2
+ *= reuqire cleanblog
+ *= require font-awesome
  *= require_self
  *= require_tree .
- *= reuqire cleanblog
  */
