--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap
- *= reuqire cleanblog
+ *= require cleanblog
  *= require font-awesome
  *= require_self
  *= require_tree .
