--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 	<title>Fen's Blogger</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tags %>
@@ -26,7 +27,7 @@
 					<span class="icon-bar"></span>						
 					<span class="icon-bar"></span>	
 				</button>
-				<a class="navbar-brand" href="index.html">Start Blogger</a>
+				<a class="navbar-brand" href="index.html">Smart Trip</a>
 				
 			</div>
 
@@ -97,7 +98,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Copyright &copy; Big Fen 2015</p>
                 </div>
             </div>
         </div>
@@ -113,8 +114,8 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h1 class="text-center">Login</h1>
       </div>
-      <div class="modal-body">
       <%= form_tag author_sessions_path, { method: :post, class: "form col-md-12 center-block"} do %>
+      <div class="modal-body">
           <div class="form-group">
             <%= text_field_tag :email, nil, { class: "form-control input-lg", placeholder: "Email" } %>
           </div>
@@ -125,8 +126,8 @@
             <%= submit_tag "Sign In", class: "btn btn-primary btn-lg btn-block" %>
             <span class="pull-right"><a href="#">Register</a></span><span><%= link_to 'Back', articles_path %></span>
           </div>
-      <% end %>
       </div>
+    <% end %>
       <div class="modal-footer">
         <div class="col-md-12">
           <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
