--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 						<li><%= link_to "Logout", logout_path %></li>
 					<% else %>
 						<!-- <li><%= link_to "Login", login_path %></li> -->
-						<li><button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#loginModal">sign in</button></li>
+						<li><%= link_to("sign in", login_url , remote: true, "data-toggle" =>"modal", "data-target"=>"#FenhanModal" ) %></li>
 					<% end %>
                 </ul>
             </div>
@@ -107,30 +107,19 @@
 
 <% unless logged_in? %>
 <!--login modal-->
-<div id="loginModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="FenhanModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h1 class="text-center">Login</h1>
+        <h1 class="text-center" id="FenhanModal-Header"></h1>
       </div>
-      <%= form_tag author_sessions_path, { method: :post, class: "form col-md-12 center-block"} do %>
-      <div class="modal-body">
-          <div class="form-group">
-            <%= text_field_tag :email, nil, { class: "form-control input-lg", placeholder: "Email" } %>
-          </div>
-          <div class="form-group">
-            <%= password_field :password, nil, { class: "form-control input-lg", placeholder: "Password" } %>
-          </div>
-          <div class="form-group">
-            <%= submit_tag "Sign In", class: "btn btn-primary btn-lg btn-block" %>
-            <span class="pull-right"><a href="#">Register</a></span><span><%= link_to 'Back', articles_path %></span>
-          </div>
+      <div id="FenhanModal-Content">
+      
       </div>
-    <% end %>
       <div class="modal-footer">
         <div class="col-md-12">
-          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
         </div>  
       </div>
     </div>
