Complete iframe function

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -19,15 +19,15 @@
     <div class="row text-center">
         <div class="col-xs-4 info-icons">
             <i class="fa fa-bullhorn fa-7x"></i>
-            <h1>WHAT</h1>
+            <h1>What</h1>
         </div>
         <div class="col-xs-4">
             <i class="fa fa-subway fa-7x"></i>
-            <h1>WHY</h1>
+            <h1>Why</h1>
         </div>
         <div class="col-xs-4">
             <i class="fa fa-usd fa-7x"></i>
-            <h1>HOW</h1>
+            <h1>How</h1>
         </div>
     </div>
 </div>
