--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -2,3 +2,7 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+#Fenhaniframe-pages{
+    overflow-y: hidden;
+    background-color: '#c0e9ff';
+}
