--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <%= link_to("Home", root_url ) %>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <%= link_to("Book It!", pages_url ) %>
                     </li>
                     <li>
                         <a href="post.html">Sample Post</a>
