change the small screen in the index page

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -17,15 +17,15 @@
 <!-- Main Content -->
 <div class="container">
     <div class="row text-center">
-        <div class="col-xs-4 info-icons">
+        <div class="col-xs-12 col-md-4 info-icons">
             <i class="fa fa-bullhorn fa-7x"></i>
             <h1>What</h1>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-12 col-md-4 ">
             <i class="fa fa-subway fa-7x"></i>
             <h1>Why</h1>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-12 col-md-4 ">
             <i class="fa fa-usd fa-7x"></i>
             <h1>How</h1>
         </div>
