delete font-awesome.js and solve the font bugs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,22 @@
  *
  *= require bootstrap
  *= require cleanblog
- *= require font-awesome
  *= require_self
  *= require_tree .
  */
+.fa-5x {
+  font-size: 5em;
+}
+.fa-6x {
+  font-size: 6em;
+}
+.fa-7x {
+  font-size: 7em;
+}
+.fa-10x {
+  font-size: 10em;
+}
+.fa-fw {
+  width: 1.28571429em;
+  text-align: center;
+}
